# slack-tabmcp-chat-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
docs/: heroku-deploy.md
docs/plans/: 2026-02-24-containerization-design.md  2026-02-24-containerization-plan.md
handlers/: dm.py  mention.py
services/: agent.py  mcp_client.py  reply.py  thread_history.py
services/subagents/: __init__.py  slack_agent.py  tableau.py  web.py
