[project]
name = "slack-tabmcp-chat-bot"
version = "0.1.0"
description = "Slack ChatBot with Tableau MCP integration"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.3",
    "langchain-aws>=1.2.5",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.17",
    "slack-bolt>=1.27.0",
]
